--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         crossorigin="anonymous"/>
     <link rel="stylesheet" href="static/css/style.css">
 </head>
-<body>
+<body class="bg-dark">
     <div class="wrapper">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
         <div class="jumbotron">
-            <h1>The Truth Is Out There</h1>
+            <h1class="display-4">The Truth Is Out There</h1>
         </div>
         <div class="container-fluid">
             <div class="row">
@@ -42,15 +42,15 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
-                    <form>
+                    <form class="list-group-item bg-dark">
                         <p>Filter Search</p>
-                        <ul class="list-group">
-                            <li class="list-group-item">
+                        <ul class=" bg-dark">
+                            <li class="list-group-item bg-dark">
                                 <label for="date">Enter Date</label>
                                 <input type="text" placeholder="1/10/2010" id="datetime" />
                             </li>
-                            <li class="list-group-item">
-                                <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                            <li class="list-group-item bg-dark">
+                                <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
                             </li>
                         </ul>    
                     </form>    
